--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -44,7 +44,14 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.0.2
         with:
-        # Set always-auth in npmrc.
           always-auth: false
+          # Version Spec of the version to use. Examples: 12.x, 10.15.1, >=10.15.0.
+          node-version: 22.x
+          # File containing the version Spec of the version to use.  Examples: package.json, .nvmrc, .node-version, .tool-versions.
+          # Target architecture for Node to use. Examples: x86, x64. Will use system architecture by default.
+          architecture: x64
+          # Set this option if you want the action to check for the latest available version that satisfies the version spec.
+          check-latest: true
+         
 
           
